[project]
name = "pubmedfetcher"
version = "0.1.0"
description = "\"A tool to fetch PubMed Papers\""
authors = [
    {name = "M Meghana"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
